# ttd-bank-statements

./: .gitignore  README.md  pyproject.toml
src/: data_loader.py
tests/: test_data_loader.py
