[tool.poetry]
name = "bank-statements"
version = "0.1.0"
description = ""
authors = ["Adam Leigh <adam@fluently.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
